--- a/css/lecturelist.css
+++ b/css/lecturelist.css
@@ -77,7 +77,7 @@ table { margin: 0; }
 	padding-top: 10px;
 }
 
-.lecturelist_widget table#agenda tbody tr:last-child td {	
+.lecturelist_widget table#agenda tbody tr.agenda-row:last-child > td {	
 	padding-bottom: 20px;
 }
 
