--- a/css/lecturelist.css
+++ b/css/lecturelist.css
@@ -58,6 +58,10 @@ table { margin: 0; }
 	border-bottom: 1px solid #CCC;
 	padding-bottom: 6px;
 }
+.lecturelist_widget h1.lecture-subject *:first-child {
+	vertical-align: top;
+}
+
 
 /* Agenda Table */
 
