Improved error handling.
Messages are shown in the following cases:
- Unconfigured widget
- Failure to fetch state from server (distinct from unconfigured)
- Failure to fetch ical feed

Also failure to save settings was already covered.

--- a/css/lecturelist.css
+++ b/css/lecturelist.css
@@ -25,6 +25,8 @@
 	width: 40em;
 	margin-left: auto;
 	margin-right: auto;
+	margin-bottom: 5px;
+	margin-top: 5px;
 	padding-bottom: 6px;
 	
 	border-radius: 10px 10px 0px 0px;
@@ -34,11 +36,11 @@
 	box-shadow: 0 0 6px 0px #aaa;
 }
 
-.error_container p {
-	margin: 1em;
+.error_container *:not(.error_title) {
+	/* margin: 1em; */
 }
 .error_container .error_content {
-	
+	padding: 0.5em 1.5em 1.5em 1.5em;
 }
 .error_container .error_title {
 	
