Replaced loading.gif with built in ajax_load.gif in Sakai UX.

--- a/css/calendarfeed.css
+++ b/css/calendarfeed.css
@@ -257,6 +257,11 @@ table { margin: 0; }
 	border: 1px solid darkGray;
 }
 
+.loading {
+	margin-top: 100px;
+	margin-bottom: 100px;
+}
+
 /* ==========================================================================
    JQuery UI Slider css
    ========================================================================== */
